Added _DEBUG as preprocessor definition when building DEBUG build.
git-svn-id: https://nzb-sorter.googlecode.com/svn/trunk@8 46dbd1c4-6f4b-0410-9807-2539ebdfb00e

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,6 +27,9 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 set(SORTER_SRCS NzbFile.cpp NzbParser.cpp main.cpp)
 
 add_definitions(${QT_DEFINITIONS})
+if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+	add_definitions(-D_DEBUG)
+endif(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
 
 set(SORTER_BINARY nzb-sorter)
 add_executable(${SORTER_BINARY} ${SORTER_SRCS})
